--- a/infos.html
+++ b/infos.html
@@ -34,7 +34,8 @@
                             <a-asset-item id="ring" src="assets/ring final.glb"></a-asset-item>
                         </a-assets>
 
-                        <a-camera position="0 1 4"></a-camera>
+                        <a-camera position="0 1 4" look-controls="enabled: false"
+                            wasd-controls="enabled: false"></a-camera>
 
                         <a-entity gltf-model="#ring" animation-mixer="clip: 1_boxing_idle; loop: repeat"
                             position="0 0 0" scale="0.1 0.1 0.1"
@@ -56,7 +57,8 @@
                             <a-asset-item id="player1scene2" src="assets/Player1multianimation.glb"></a-asset-item>
                         </a-assets>
 
-                        <a-camera position="0 2.5 6"></a-camera>
+                        <a-camera position="0 2.5 6" look-controls="enabled: false"
+                            wasd-controls="enabled: false"></a-camera>
 
                         <a-entity gltf-model="#player1scene2" animation-mixer="clip: armada ; loop: repeat"
                             position="0 -1 0">
@@ -114,7 +116,8 @@
                             <a-asset-item id="char2Credit" src="assets/Player2multianimation.glb"></a-asset-item>
                         </a-assets>
 
-                        <a-camera position="0 1.5 4"></a-camera>
+                        <a-camera position="0 1.5 4" look-controls="enabled: false"
+                            wasd-controls="enabled: false"></a-camera>
 
                         <!-- Ring -->
                         <a-entity gltf-model="#ringCredit" position="0 0 0" scale="0.12 0.12 0.12"
