--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
     <title>Projeto Final IREDE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -68,9 +68,9 @@
 
     </div>
 
-    <a-scene id="sceneAR" mindar-image="imageTargetSrc: ./assets/hiro escala 3.mind;" color-space="sRGB"
-        renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
+    <a-scene id="sceneAR" embedded
+        arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+        vr-mode-ui="enabled: false">
 
         <a-assets>
             <a-asset-item id="boardModel" src="./assets/ring final.glb"></a-asset-item>
@@ -80,9 +80,8 @@
         </a-assets>
 
         <a-light type="directional" color="#ffffff" intensity="1.5" position="-0.71 1.6 1"></a-light>
-        <a-camera position="0 0 0" look-controls="enabled: false" wasd-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0">
+        <a-marker preset="hiro">
             <a-entity id="group" position="0 0 0" rotation="0 0 0">
                 <a-entity gltf-model="#boardModel" rotation="90 0 0" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
                 <a-entity id="character1" gltf-model="#character1Asset" rotation="90 0 0" position="0 0.3 0.1"
@@ -91,21 +90,13 @@
                     scale="-0.15 0.15 -0.15"></a-entity>
             </a-entity>
 
-
             <a-entity id="dice" gltf-model="#diceModel" rotation="90 0 0" position="-0.55 -0.03 0.34"
                 scale="0.006 0.006 0.006" visible="false">
             </a-entity>
+        </a-marker>
 
-
-
-
-            <!-- <a-entity id="diceText" text="value: 0; color: #FFD700; align: center; width: 2" position="-0.55 0.03 0.34"
-                rotation=" 90 0 0" scale="0 0 0" visible="false"> -->
-        </a-entity>
-        </a-entity>
-
+        <a-entity camera></a-entity>
     </a-scene>
-
     <!-- Tela de Game Over -->
     <div id="gameOverScreen" class="hidden">
         <div class="game-over-content">
@@ -385,17 +376,14 @@
         let aiDeck = [];
         let isPlayerTurn = true;
         let markerDetected = false;
-        const target = document.querySelector('[mindar-image-target]');
+        const marker = document.querySelector('a-marker');
 
 
-        target.addEventListener('targetFound', () => {
+        marker.addEventListener('markerFound', () => {
             console.log('Marcador detectado!');
 
             if (!markerDetected) {
                 markerDetected = true;
-
-                // Remove mensagem de scan
-                // document.getElementById('scanMarkerMessage').classList.remove('active');
 
                 // Ativa HUD e UI
                 document.getElementById('hud').classList.add('active');
@@ -408,8 +396,9 @@
             }
         });
 
-        target.addEventListener('targetLost', () => {
+        marker.addEventListener('markerLost', () => {
             console.log('Marcador perdido');
+            markerDetected = false;
         });
 
         function createDeck() {
