--- a/infos.html
+++ b/infos.html
@@ -78,6 +78,8 @@
                         <li><strong>Three.js:</strong> Biblioteca para gráficos 3D (A-Frame roda em cima do Three.js)
                         </li>
                         <li><strong>HTML5/CSS3/JavaScript:</strong> Tecnologias web comuns</li>
+                        <strong>PS: Usei o mind AR ao invés do AR.js porque era mais fácil de trabalhar com
+                            ele.</strong>
                     </ul>
                 </div>
             </div>
